--- a/discourse-dark.user.css
+++ b/discourse-dark.user.css
@@ -593,7 +593,8 @@ url-prefix("https://www.sitepoint.com/community/") {
   a, a:hover, a:active, a:visited,
   body #topic .topic-body .contents div.cooked a:not([class]),
   .groups .group-link,
-  .select-kit.combo-box .select-kit-collection .collection-header a {
+  .select-kit.combo-box .select-kit-collection .collection-header a,
+  aside.onebox .onebox-body a[href] {
     color: var(--main-color); /* not important */
   }
   .select-kit.combo-box .select-kit-header.is-focused, input[type="text"]:focus,
